# stock-exchange-reports

./: .gitignore  README.md  main.py  pyproject.toml
announcements/: __init__.py
announcements/sg/: __init__.py  sg_dataclasses.py  sg_sgx_announcements.py
